--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/scenic_background"
     >
 
     <!--Table Layout with 3 rows and each row with 3 buttons-->
@@ -26,11 +23,11 @@
 
             <Button
                 android:id="@+id/b00"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -38,11 +35,11 @@
 
             <Button
                 android:id="@+id/b01"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -50,11 +47,11 @@
 
             <Button
                 android:id="@+id/b02"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -67,11 +64,11 @@
 
             <Button
                 android:id="@+id/b10"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -79,11 +76,11 @@
 
             <Button
                 android:id="@+id/b11"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -91,11 +88,11 @@
 
             <Button
                 android:id="@+id/b12"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -108,11 +105,11 @@
 
             <Button
                 android:id="@+id/b20"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -120,11 +117,11 @@
 
             <Button
                 android:id="@+id/b21"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -132,11 +129,11 @@
 
             <Button
                 android:id="@+id/b22"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@color/colorAccent"
+                android:background="@drawable/molang_neutral"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
