--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -3,13 +3,14 @@
     android:layout_height="fill_parent"
     android:padding="35sp"
     android:orientation="vertical"
+    android:background="@drawable/scenic_background"
     >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-
+        android:text="@string/main_menu_title"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
