--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -4,8 +4,21 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/scenic_background"
-
+    android:paddingTop="50dp"
     >
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/glGameBoard"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/pangolin"
+        android:gravity="center_horizontal"
+        android:text="@string/main_menu_title"
+        android:textSize="25sp"
+        android:textStyle="normal" />
 
     <!--Table Layout with 3 rows and each row with 3 buttons-->
     <TableLayout
@@ -16,7 +29,7 @@
         android:layout_below="@+id/tvInfo"
         android:rowCount="3"
         android:columnCount="3"
-        android:padding="8dp"
+        android:padding="10dp"
         >
 
         <!--Row 1-->
@@ -32,7 +45,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -44,7 +57,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -56,7 +69,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -73,7 +86,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -85,7 +98,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -97,7 +110,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -114,7 +127,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -126,7 +139,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
@@ -138,7 +151,7 @@
                 android:textColor="#FFFFFF"
                 android:background="@drawable/molang_neutral"
                 android:gravity="center"
-                android:layout_margin="8dp"
+                android:layout_margin="1sp"
                 style="@style/Widget.AppCompat.Button"
                 />
 
