--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -46,7 +46,8 @@
             android:id="@+id/main_menu_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
             <Button
                 android:id="@+id/play_button"
                 android:layout_width="wrap_content"
